--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
             </ul>
           </nav>
 
-          <form class="search" action="/" method="post">
+          <form class="search" action="search.html" method="get">
             <input
               class="search__input"
               type="text"
@@ -111,7 +111,7 @@
         <!--sidebar__content-->
 
         <div class="sidebar__footer">
-          <a class="btn btn__red" href="#">Мои работы</a>
+          <a class="btn btn__red" href="works.html">Мои работы</a>
           <button class="btn btn__blue" type="button">Написать мне</button>
         </div>
       </aside>
