--- a/app/index.html
+++ b/app/index.html
@@ -112,7 +112,9 @@
 
         <div class="sidebar__footer">
           <a class="btn btn__red" href="works.html">Мои работы</a>
-          <button class="btn btn__blue" type="button">Написать мне</button>
+          <a href="https://t.me/k1kaaa7">
+          <button  class="btn btn__blue" type="button">Написать мне</button>
+        </a>
         </div>
       </aside>
     </div>
