--- a/app/search.html
+++ b/app/search.html
@@ -111,8 +111,10 @@
         <!--sidebar__content-->
 
         <div class="sidebar__footer">
-          <a class="btn btn__red" href="#">Мои работы</a>
-          <button class="btn btn__blue" type="button">Написать мне</button>
+          <a class="btn btn__red" href="works.html">Мои работы</a>
+          <a href="https://t.me/k1kaaa7">
+            <button  class="btn btn__blue" type="button">Написать мне</button>
+          </a>
         </div>
       </aside>
     </div>
