--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
                 <a class="nav__link" href="profile.html">Профиль</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#">Выйти</a>
+                <a class="nav__link" href="signin.html">Выйти</a>
               </li>
             </ul>
           </nav>
