--- a/app/post.html
+++ b/app/post.html
@@ -7,7 +7,8 @@
     <title>Personal Blog</title>
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   </head>
-  <body>
+  
+  <body class="show__sidebar">
     <div class="page">
       <header class="header">
         <div class="header__left">
@@ -41,6 +42,11 @@
               </li>
             </ul>
           </nav>
+
+          <button class="burger" type="button">
+            <span>navig</span>
+          </button>
+
         </div>
 
         <div class="header__right">
@@ -50,7 +56,7 @@
                 <a class="nav__link" href="profile.html">Профиль</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#">Выйти</a>
+                <a class="nav__link" href="signin.html">Выйти</a>
               </li>
             </ul>
           </nav>
@@ -59,7 +65,7 @@
             <input
               class="search__input"
               type="text"
-              placeholder="Поиск по блоку"
+              placeholder="Поиск по блогу"
             />
           </form>
         </div>
@@ -74,8 +80,10 @@
         <div class="sidebar__content">
           <div class="profile">
             <img class="profile__avatar" src="images/I am.jpg" alt="" />
-            <div class="profile__name">Затёсова Кристина</div>
-            <div class="profile__prof">блог front-end разработчика</div>
+            <div class="profile__header">
+              <div class="profile__name">Затёсова Кристина</div>
+              <div class="profile__prof">блог front-end разработчика</div>
+            </div>
 
             <ul class="social">
               <li class="social__item">
@@ -105,10 +113,40 @@
                 сложности.
               </p>
             </div>
-          </div>
-          <!--profile-->
-        </div>
-        <!--sidebar__content-->
+          </div><!--profile-->
+
+          <nav class="nav nav__mobile">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="index.html">Главная</a>
+              </li>
+
+              <li class="nav__item">
+                <a class="nav__link has-subnav" href="post.html">Статьи</a>
+
+                <ul class="subnav">
+                  <li>
+                    <a class="subnav__link" href="#">Создание сайтов</a>
+                  </li>
+                  <li>
+                    <a class="subnav__link" href="#">Интернет-маркетинг</a>
+                  </li>
+                  <li>
+                    <a class="subnav__link" href="#">Продвижение видео</a>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="nav__item">
+                <a class="nav__link" href="text.html">Обо мне</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="text.html">Реклама</a>
+              </li>
+            </ul>
+          </nav>
+
+        </div><!--sidebar__content-->
 
         <div class="sidebar__footer">
           <a class="btn btn__red" href="works.html">Мои работы</a>
