--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <title>Personal Blog</title>
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   </head>
-  <body class="show__sidebar">
+  <body>
     <div class="page">
       <header class="header">
         <div class="header__left">
@@ -144,6 +144,12 @@
               <li class="nav__item">
                 <a class="nav__link" href="text.html">Реклама</a>
               </li>
+              <li class="nav__item">
+                <a class="nav__link" href="profile.html">Профиль</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">Выйти</a>
+              </li>
             </ul>
           </nav>
         </div><!--sidebar__content-->
@@ -201,7 +207,7 @@
                 <input type="file" id="add-post-file" />
               </label>
               <button class="add__send" type="submit">
-                <img src="images/send1.svg" alt="Отправить" />
+                Отправить
               </button>
             </div>
           </form>
