--- a/app/post.html
+++ b/app/post.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   </head>
   
-  <body class="show__sidebar">
+  <body>
     <div class="page">
       <header class="header">
         <div class="header__left">
@@ -173,7 +173,7 @@
             </a>
           </div>
           <div class="post__header post__header_open">
-            <h1 class="post__title post__title__mb0">
+            <h1 class="post__title post__title__open">
               Как я сходил на FrontEnd Conf 2021
             </h1>
             <ul class="post__data">
