--- a/app/signin.html
+++ b/app/signin.html
@@ -7,7 +7,7 @@
     <title>Personal Blog</title>
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   </head>
-  <body class="show__sidebar">
+  <body>
     <div class="page">
       <header class="header">
         <div class="header__left">
