--- a/app/reset.html
+++ b/app/reset.html
@@ -8,116 +8,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   </head>
   <body>
-    <div class="page">
+    <div class="page" id="page">
       <header class="header">
         <div class="header__left">
           <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a class="nav__link" href="index.html">Главная</a>
-              </li>
-
-              <li class="nav__item">
-                <a class="nav__link has-subnav" href="post.html">Статьи</a>
-
-                <ul class="subnav">
-                  <li>
-                    <a class="subnav__link" href="works.html"
-                      >Создание сайтов</a
-                    >
-                  </li>
-                  <li>
-                    <a class="subnav__link" href="#">Интернет-маркетинг</a>
-                  </li>
-                  <li>
-                    <a class="subnav__link" href="#">Продвижение видео</a>
-                  </li>
-                </ul>
-              </li>
-
-              <li class="nav__item">
-                <a class="nav__link" href="#">Обо мне</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="#">Реклама</a>
-              </li>
-            </ul>
-          </nav>
-
-          <button class="burger" type="button">
-            <span>navig</span>
-          </button>
-
-        </div>
-
-        <div class="header__right">
-          <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a class="nav__link" href="#">Профиль</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="#">Выйти</a>
-              </li>
-            </ul>
-          </nav>
-
-          <form class="search" action="/" method="post">
-            <input
-              class="search__input"
-              type="text"
-              placeholder="Поиск по блоку"
-            />
-          </form>
-        </div>
-      </header>
-
-      <!--Sidebar-->
-      <aside class="sidebar">
-        <div class="sidebar__header">
-          <img src="images/sidebar__header.jpg" alt="" />
-        </div>
-
-        <div class="sidebar__content">
-          <div class="profile">
-            <img class="profile__avatar" src="images/I am.jpg" alt="" />
-
-            <div class="profile__header">
-              <div class="profile__name">Затёсова Кристина</div>
-              <div class="profile__prof">блог front-end разработчика</div>
-            </div>
-
-            <ul class="social">
-              <li class="social__item">
-                <a class="social__link" href="#" target="_blank">
-                  <img src="images/instagram.svg" alt="instagram" />
-                </a>
-              </li>
-
-              <li class="social__item">
-                <a class="social__link" href="#" target="_blank">
-                  <img src="images/vk.svg" alt="vk" />
-                </a>
-              </li>
-
-              <li class="social__item">
-                <a class="social__link" href="#" target="_blank">
-                  <img src="images/pinterest.svg" alt="pinterest" />
-                </a>
-              </li>
-            </ul>
-
-            <div class="profile__text">
-              <p>
-                Front-end разработчик. Практик верстки сайтов. Созданием сайтов
-                занимаюсь с 2012 года. Работал в нескольких ИТ компаниях и
-                наработал более 10 000 часов в создании сайтов различной
-                сложности.
-              </p>
-            </div>
-          </div> <!--profile-->
-
-          <nav class="nav nav__mobile">
             <ul class="nav__list">
               <li class="nav__item">
                 <a class="nav__link" href="index.html">Главная</a>
@@ -148,12 +42,123 @@
             </ul>
           </nav>
 
+          <button class="burger" type="button" id="sidebarToggle">
+            <span>открыть навигацию</span>
+          </button>
+        </div>
+
+        <div class="header__right">
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="profile.html">Профиль</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="signin.html">Выйти</a>
+              </li>
+            </ul>
+          </nav>
+
+          <form class="search" action="search.html" method="get">
+            <input
+              class="search__input"
+              type="text"
+              placeholder="Поиск по блогу"
+            />
+          </form>
+        </div>
+      </header>
+
+      <!--Sidebar-->
+      <aside class="sidebar" id="sidebar">
+        <div class="sidebar__header">
+          <img src="images/sidebar__header.jpg" alt="" />
+        </div>
+
+        <div class="sidebar__content">
+          <div class="profile">
+
+              <img class="profile__avatar" src="images/I am.jpg" alt="" />
+            
+            <div class="profile__header">
+              <div class="profile__name">Затёсова Кристина</div>
+              <div class="profile__prof">блог front-end разработчика</div>
+            </div>
+
+
+            <ul class="social">
+              <li class="social__item">
+                <a class="social__link" href="#" target="_blank">
+                  <img src="images/instagram.svg" alt="instagram" />
+                </a>
+              </li>
+
+              <li class="social__item">
+                <a class="social__link" href="#" target="_blank">
+                  <img src="images/vk.svg" alt="vk" />
+                </a>
+              </li>
+
+              <li class="social__item">
+                <a class="social__link" href="#" target="_blank">
+                  <img src="images/pinterest.svg" alt="pinterest" />
+                </a>
+              </li>
+            </ul>
+
+            <div class="profile__text">
+              <p>
+                Front-end разработчик. Практик верстки сайтов. Созданием сайтов
+                занимаюсь с 2012 года. Работал в нескольких ИТ компаниях и
+                наработал более 10 000 часов в создании сайтов различной
+                сложности.
+              </p>
+            </div>
+          </div><!--profile-->
+
+          <nav class="nav nav__mobile">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="index.html">Главная</a>
+              </li>
+
+              <li class="nav__item">
+                <a class="nav__link has-subnav" href="post.html">Статьи</a>
+
+                <ul class="subnav">
+                  <li>
+                    <a class="subnav__link" href="#">Создание сайтов</a>
+                  </li>
+                  <li>
+                    <a class="subnav__link" href="#">Интернет-маркетинг</a>
+                  </li>
+                  <li>
+                    <a class="subnav__link" href="#">Продвижение видео</a>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="nav__item">
+                <a class="nav__link" href="text.html">Обо мне</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="text.html">Реклама</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="profile.html">Профиль</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="signin.html">Выйти</a>
+              </li>
+            </ul>
+          </nav>
         </div><!--sidebar__content-->
 
         <div class="sidebar__footer">
           <a class="btn btn__red" href="works.html">Мои работы</a>
-          <a href="https://t.me/k1kaaa7">
-            <button class="btn btn__blue" type="button">Написать мне</button>
+          <a href="#">
+            <button class="btn btn__blue" data-modal="contact__modal"
+            type="button">Написать мне</button>
           </a>
         </div>
       </aside>
@@ -194,6 +199,108 @@
         </form>
       </div>
     </main>
+
+    <!--modal-->
+    <div class="modal" id="contact__modal">
+      <div class="modal__content modal__content__botton">
+
+        <button class="modal__close" type="button">
+          <img src="images/contact-vector.svg" alt="закрыть" />
+        </button>
+
+        <form class="form" action="/" method="post">
+          <div class="form__group form__group__md">
+            <input class="form__control" type="text" placeholder="Ваше имя" />
+            <span class="form__line"></span>
+          </div>
+
+          <div class="form__group form__group__md">
+            <input
+              class="form__control"
+              type="email"
+              placeholder="Ваш e-mail"
+            />
+            <span class="form__line"></span>
+          </div>
+
+          <div class="form__group form__group__md">
+            <textarea
+              class="form__control form__control__textarea"
+              placeholder="Текст сообщения"
+              name=""
+            ></textarea>
+            <span class="form__line"></span>
+          </div>
+
+          <div class="form__footer">
+            <div class="form__group form__group__md">
+              <button class="btn btn__blue btn__rounded btn__sm" type="submit">
+                Отправить
+              </button>
+            </div>
+          </div>
+
+          <ul class="modal__footer">
+            <li>
+              e-mail:
+              <a href="mailto:kzatesova@gmail.com"> kzatesova@gmail.com </a>
+            </li>
+
+            <li>
+              тел:
+              <a href="tel:+998938411570"> +99893-841-15-70 </a>
+            </li>
+          </ul>
+        </form>
+      </div>
+      <!--modal__content-->
+    </div>
+    <!--/.modal-->
+
+    <!--modal2-->
+    <div class="modal" id="copy__modal">
+      <div class="modal__content">
+        <button class="modal__close" type="button">
+          <img src="images/contact-vector.svg" alt="закрыть" />
+        </button>
+
+        <ul class="social">
+          <li class="social__item">
+            <a class="social__link" href="#">
+              <img src="images/facebook.svg" alt="instagram" />
+            </a>
+          </li>
+
+          <li class="social__item">
+            <a class="social__link" href="#">
+              <img src="images/twitter.svg" alt="vk" />
+            </a>
+          </li>
+
+          <li class="social__item">
+            <a class="social__link" href="#">
+              <img src="images/vk 2.svg" alt="pinterest" />
+            </a>
+          </li>
+
+          <li class="social__item">
+            <a class="social__link" href="#">
+              <img src="images/copy.svg" alt="pinterest" />
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!--modal__content-->
+    </div>
+    <!--/.modal-->
+
+    <!--modal3-->
+  <div class="modal" id="story__modal">
+    <div class="modal__content modal__content__story">
+      <video class="model__video" src="" poster="images/work/work1.jpg"></video>
+    </div>
+  </div>
+    <!--/.modal-->
 
     <!--JS-->
     <script src="js/main.min.js"></script>
