модальные окна видео

--- a/app/reset.html
+++ b/app/reset.html
@@ -297,7 +297,7 @@
     <!--modal3-->
   <div class="modal" id="story__modal">
     <div class="modal__content modal__content__story">
-      <video class="model__video" src="" poster="images/work/work1.jpg"></video>
+      <video class="model__video" src="images/video/doc_2022-04-30_12-17-11.mp4"></video>
     </div>
   </div>
     <!--/.modal-->
