--- a/app/works.html
+++ b/app/works.html
@@ -171,7 +171,7 @@
         <article class="work">
           <div class="work__preview">
             <picture>
-              <source srcset="575/150" 
+              <source srcset="images/work/work3.jpg" 
               media="(max-width: 575px)">
               <img src="images/work/work1.jpg" alt="" />
             </picture>
@@ -213,7 +213,7 @@
         <article class="work">
           <div class="work__preview">
             <picture>
-              <source srcset="575/150" 
+              <source srcset="images/work/work4.jpg" 
               media="(max-width: 575px)">
               <img src="images/work/work2.jpg" alt="" />
             </picture>
