--- a/app/profile.html
+++ b/app/profile.html
@@ -108,10 +108,8 @@
 
             <div class="profile__text">
               <p>
-                Front-end разработчик. Практик верстки сайтов. Созданием сайтов
-                занимаюсь с 2012 года. Работал в нескольких ИТ компаниях и
-                наработал более 10 000 часов в создании сайтов различной
-                сложности.
+                Junior Front-end разработчик. Практик верстки сайтов. 
+            
               </p>
             </div>
           </div><!--profile-->
